--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <!-- Supabase -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1"></script>
 
@@ -279,6 +287,50 @@
             align-items: center;
             flex-direction: column;
         }
+
+        #pieChart {
+            width: 300px !important;
+            height: 300px !important;
+            max-width: 100%;
+            margin-top: 20px;
+            display: block;
+        }
+
+        .score-board {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 12px;
+            margin-right: 20px;
+            padding: 12px;
+            background: #263238;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            color: #ffffff;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .score-item {
+            text-align: center;
+        }
+
+        .label {
+            font-size: 12px;
+            letter-spacing: 1px;
+            color: #cfd8dc;
+        }
+
+        .value {
+            font-size: 22px;
+            font-weight: bold;
+            margin-top: 4px;
+            color: #ffffff;
+            background: #546e7a;
+            border-radius: 6px;
+            padding: 4px 10px;
+            display: inline-block;
+            min-width: 60px;
+        }
     </style>
 </head>
 
@@ -352,11 +404,32 @@
             <button onclick="nextChartPage()">Berikutnya <i class="fas fa-arrow-right"></i></button>
         </div>
     </div>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d151419.96168425004!2d114.55046602748159!3d-1.0797568179362869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sid!2sid!4v1746187282992!5m2!1sid!2sid"
-        width="1800" height="1000" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div style="display: flex; justify-content: center; align-items: flex-start; gap: 20px; margin-top: 20px;">
+        <div style="display: flex; align-items: center;">
+            <!-- Papan Skor -->
+            <div class="score-board">
+                <div class="score-item">
+                    <div class="label">MAXIMUM VIBRATION VALUE</div>
+                    <div id="maxValue" class="value">-</div>
+                </div>
+                <div class="score-item">
+                    <div class="label">MINIMUM VIBRATION VALUE</div>
+                    <div id="minValue" class="value">-</div>
+                </div>
+            </div>
 
+            <!-- Pie Chart -->
+            <canvas id="pieChart" width="220" height="220"></canvas>
+        </div>
+
+
+        <div style="text-align: center;">
+            <canvas id="pieChart"></canvas>
+        </div>
+
+        <div id="map" style="width: 1300px; height: 300px; border-radius: 10px;"></div>
+
+    </div>
     <!-- Loading Indicator (Opsi 3: Radar Animation) - TAMBAHKAN INI SEBELUM FOOTER -->
     <div id="loadingIndicator">
         <div class="radar"
@@ -454,6 +527,7 @@
                 const labels = [];
                 const speeds = [];
                 const vibrations = [];
+                let low = 0, medium = 0, high = 0;
 
                 filtered.forEach(row => {
                     const timeStr = new Date(row.timestamp).toLocaleString();
@@ -473,9 +547,22 @@
                     labels.push(row.km_label + ' (' + timeStr + ')');
                     speeds.push(row.speed);
                     vibrations.push(vibration);
+
+                    // Kategorisasi getaran
+                    if (!isNaN(vibration)) {
+                        if (vibration < 20) {
+                            low++;
+                        } else if (vibration < 40) {
+                            medium++;
+                        } else {
+                            high++;
+                        }
+                    }
                 });
 
                 updateChart(labels, speeds, vibrations);
+                updatePieChart(low, medium, high);
+
             } catch (error) {
                 console.error('Error:', error);
                 alert('Terjadi kesalahan: ' + error.message);
@@ -600,6 +687,67 @@
             document.getElementById('myChart').style.width = (labels.length * 60) + 'px';
         }
 
+        function updatePieChart(low, medium, high) {
+            const ctx = document.getElementById('pieChart').getContext('2d');
+            if (window.pieChartInstance) {
+                window.pieChartInstance.destroy();
+            }
+
+            const values = [low, medium, high];
+            const max = Math.max(...values);
+            const min = Math.min(...values);
+
+            // Tampilkan nilai max dan min di HTML
+            document.getElementById('maxValue').textContent = max;
+            document.getElementById('minValue').textContent = min;
+
+            window.pieChartInstance = new Chart(ctx, {
+                type: 'pie',
+                data: {
+                    labels: ['Low (<20)', 'Medium (20-39)', 'High (≥40)'],
+                    datasets: [{
+                        data: [low, medium, high],
+                        backgroundColor: ['#4caf50', '#ff9800', '#f44336'],
+                        borderColor: '#b9bdbd',
+                        borderWidth: 2,
+                        hoverOffset: 10
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            position: 'bottom'
+                        },
+                        title: {
+                            display: true,
+                            text: 'DISTRIBUSI VIBRATION READING'
+                        },
+                        labels: {
+                            boxWidth: 12,
+                            font: { size: 12 }
+                        },
+                        datalabels: {
+                            formatter: (value, context) => {
+                                const total = low + medium + high;
+                                const percentage = total > 0 ? ((value / total) * 100).toFixed(1) : 0;
+                                return `${value} (${percentage}%)`;
+                            },
+                            color: '#fff',
+                            font: {
+                                weight: 'bold',
+                                size: 11
+                            },
+                            backgroundColor: 'rgba(0,0,0,0.5)',
+                            borderRadius: 4,
+                            padding: 4
+                        }
+                    }
+                },
+                plugins: [ChartDataLabels]
+
+            });
+        }
 
 
         function exportToCSV() {
@@ -621,6 +769,105 @@
             link.setAttribute("download", "data_tracking.csv");
             link.click();
         }
+
+        // Inisialisasi peta
+        var map = L.map('map').setView([-3.66975, 115.98705], 12);  // pusatkan pada tengah koordinat
+
+        // Tambahkan tile layer dark mode
+        L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+            attribution: '&copy; <a href="https://carto.com/">CartoDB</a>',
+            subdomains: 'abcd',
+            maxZoom: 19
+        }).addTo(map);
+
+        var koordinat = [
+            { "km": "KM 0", "lat": -1.21583901547484, "lng": 114.802090108132 },
+            { "km": "KM 1", "lat": -1.2111251108126972, "lng": 114.7949216367124 },
+            { "km": "KM 2", "lat": -1.2083908302900424, "lng": 114.78665828835803 },
+            { "km": "KM 3", "lat": -1.2018483919802543, "lng": 114.78071451318102 },
+            { "km": "KM 4", "lat": -1.2049166051688083, "lng": 114.77365815822851 },
+            { "km": "KM 5", "lat": -1.2039084258883925, "lng": 114.76655566875708 },
+            { "km": "KM 6", "lat": -1.1981526799675384, "lng": 114.76110434610747 },
+            { "km": "KM 7", "lat": -1.1936412762955586, "lng": 114.75388062157438 },
+            { "km": "KM 8", "lat": -1.1900659535733376, "lng": 114.74498641517133 },
+            { "km": "KM 9", "lat": -1.1857758031930952, "lng": 114.73842036750285 },
+            { "km": "KM 10", "lat": -1.182092579176163, "lng": 114.73031795103454 },
+            { "km": "KM 11", "lat": -1.1779096706060537, "lng": 114.72248590071105 },
+            { "km": "KM 12", "lat": -1.1738341458773347, "lng": 114.7144392723567 },
+            { "km": "KM 13", "lat": -1.1714316484567557, "lng": 114.70596349186964 },
+            { "km": "KM 14", "lat": -1.1682618425670357, "lng": 114.69744050293231 },
+            { "km": "KM 15", "lat": -1.1655161256087896, "lng": 114.68894326477313 },
+            { "km": "KM 16", "lat": -1.162598798407629, "lng": 114.68042456894183 },
+            { "km": "KM 17", "lat": -1.1603249971747558, "lng": 114.67190587311053 },
+            { "km": "KM 18", "lat": -1.1578108984768218, "lng": 114.66457056449146 },
+            { "km": "KM 19", "lat": -1.155365485395363, "lng": 114.65635227606982 },
+            { "km": "KM 20", "lat": -1.156824153101028, "lng": 114.64800524161548 },
+            { "km": "KM 21", "lat": -1.1531131293790597, "lng": 114.6399586145708 },
+            { "km": "KM 22", "lat": -1.145090346233737, "lng": 114.63702535183985 },
+            { "km": "KM 23", "lat": -1.139684669382925, "lng": 114.63112449200709 },
+            { "km": "KM 24", "lat": -1.136687394077592, "lng": 114.62315779557686 },
+            { "km": "KM 25", "lat": -1.135228716116432, "lng": 114.62162357202034 },
+            { "km": "KM 26", "lat": -1.1334743434953278, "lng": 114.61238980293275 },
+            { "km": "KM 27", "lat": -1.1333962828205193, "lng": 114.60353368573125 },
+            { "km": "KM 28", "lat": -1.133053064152441, "lng": 114.59524029545722 },
+            { "km": "KM 29", "lat": -1.1327065456011474, "lng": 114.58535474499516 },
+            { "km": "KM 30", "lat": -1.1324062291972872, "lng": 114.5767180319672 },
+            { "km": "KM 31", "lat": -1.131994292709185, "lng": 114.56787210794575 },
+            { "km": "KM 32", "lat": -1.13174760417629, "lng": 114.55985766740925 },
+            { "km": "KM 33", "lat": -1.1277359535083544, "lng": 114.55203741788866 },
+            { "km": "KM 34", "lat": -1.1180600745022362, "lng": 114.53785872407026 },
+            { "km": "KM 35", "lat": -1.1129728969258252, "lng": 114.53078413062032 },
+            { "km": "KM 36", "lat": -1.1130157226639257, "lng": 114.53087103131114 },
+            { "km": "KM 37", "lat": -1.107202410555654, "lng": 114.52505600216685 },
+            { "km": "KM 38", "lat": -1.1011316702462537, "lng": 114.5198417878419 },
+            { "km": "KM 39", "lat": -1.095184900127786, "lng": 114.51364696025848 },
+            { "km": "KM 40", "lat": -1.087333661457448, "lng": 114.51111495494844 },
+            { "km": "KM 41", "lat": -1.0822282002089094, "lng": 114.50426995754243 },
+            { "km": "KM 42", "lat": -1.0813701386502066, "lng": 114.49538648128511 },
+            { "km": "KM 43", "lat": -1.0812218169481562, "lng": 114.48672938451637 },
+            { "km": "KM 44", "lat": -1.0810502045989259, "lng": 114.47799611196388 },
+            { "km": "KM 45", "lat": -1.080599722136008, "lng": 114.47061467275492 },
+            { "km": "KM 46", "lat": -1.0724695748021968, "lng": 114.47389769658912 },
+            { "km": "KM 47", "lat": -1.065755215199516, "lng": 114.47604346380106 },
+            { "km": "KM 48", "lat": -1.0568436178220426, "lng": 114.4753932952881 },
+            { "km": "KM 49", "lat": -1.0481556617910968, "lng": 114.4768524169922 },
+            { "km": "KM 50", "lat": -1.040754791338496, "lng": 114.47213172912599 },
+            { "km": "KM 51", "lat": -1.032835418271312, "lng": 114.47294712066652 },
+            { "km": "KM 52", "lat": -1.0251127330830054, "lng": 114.47369813919067 },
+            { "km": "KM 53", "lat": -1.017175509454201, "lng": 114.47140216827394 },
+            { "km": "KM 54", "lat": -1.011718029323811, "lng": 114.47455215558875 },
+            { "km": "KM 55", "lat": -1.0030943065045042, "lng": 114.4734792719828 },
+            { "km": "KM 56", "lat": -1.006312116194986, "lng": 114.46545410261024 },
+            { "km": "KM 57", "lat": -1.0024357630609178, "lng": 114.45711243257395 },
+            { "km": "KM 58", "lat": -0.9943912234016248, "lng": 114.4555245648371 },
+            { "km": "KM 59", "lat": -0.9900793420639451, "lng": 114.44910872087351 },
+            { "km": "KM 60", "lat": -0.9851882459982159, "lng": 114.44217789277903 },
+            { "km": "KM 61", "lat": -0.9849333497698394, "lng": 114.43345642037458 },
+            { "km": "KM 62", "lat": -0.9853194892239688, "lng": 114.42493772454328 },
+            { "km": "KM 63", "lat": -0.9880653684949532, "lng": 114.41820001549787 },
+            { "km": "KM 64", "lat": -0.9891942975039153, "lng": 114.40933265803825 },
+            { "km": "KM 65", "lat": -0.9893086095579368, "lng": 114.4000618455175 },
+            { "km": "KM 66", "lat": -0.9864125660319052, "lng": 114.39270186398063 }
+        ];
+
+
+        var latlngs = [];
+
+        // Tambahkan marker dan polyline
+        koordinat.forEach(function (item) {
+            var marker = L.marker([item.lat, item.lng]).addTo(map)
+                .bindPopup(`<b>${item.km}</b>`);
+
+            latlngs.push([item.lat, item.lng]);
+        });
+
+        // Gambar garis jalur (track)
+        var polyline = L.polyline(latlngs, { color: 'lime', weight: 4 }).addTo(map);
+
+        // Sesuaikan tampilan peta agar muat seluruh track
+        map.fitBounds(polyline.getBounds());
+
+
     </script>
 </body>
 
