--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
             display: inline-block;
             min-width: 60px;
         }
+         .right-logo {
+            margin-left: auto;
+            height: 120px;
+            object-fit: contain;
+            gap: 10px;
+        }
     </style>
 </head>
 
@@ -349,6 +355,7 @@
                 <h1>PLANT-ASTO</h1>
                 <p>Road Condition Monitoring System</p>
             </div>
+             <img src="ASTO.png" alt="Logo Kanan" class="right-logo" />
         </div>
     </header>
 
