--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             font-family: 'Poppins', sans-serif;
             background-color: #121212;
             color: #e0e0e0;
-            padding: 40px;
             line-height: 1.6;
         }
 
@@ -160,18 +159,11 @@
 
         /* Footer Style */
         footer {
-
-            padding: 5px 0;
+            background-color: #001e3c;
             color: white;
             text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            border-radius: 6px;
-        }
-
-        footer p {
-            font-size: 9px;
+            padding: 1rem;
+            margin-top: 2rem;
         }
 
         .header-advanced {
@@ -459,7 +451,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 ASTO. All rights reserved. | Developed by Plant People development</p>
+        <p>&copy; 2025 ASTO. All rights reserved. | Developed by Plant People development.</p>
     </footer>
 
     <script>
