--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 ASTO. All rights reserved. | Developed by Plant People development.</p>
+        <p>&copy; 2025 ASTO. All rights reserved. | Created by Plant People development.</p>
     </footer>
 
     <script>
