--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
     </footer>
 
     <script>
-        const SUPABASE_URL = 'https://piqwovdbzljfystlrahe.supabase.co';
-        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBpcXdvdmRiemxqZnlzdGxyYWhlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQzNzk4NjgsImV4cCI6MjA1OTk1NTg2OH0.OjitRDAzoWXXr1oz31fZwLgIDSAMGxxUy1eINIxvru4';
+        const SUPABASE_URL = 'https://xzcuxmatigohkreivmpa.supabase.co';
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh6Y3V4bWF0aWdvaGtyZWl2bXBhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDYxMDQ2OTIsImV4cCI6MjA2MTY4MDY5Mn0.q3uUOkb6646WXkSBmbufHsQiCgPIwiFdEOixLBn_yyA';
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
 
