--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 }
 
                 const filtered = data.filter(row => {
-                    const km = parseFloat(row.km_label);
+                    const km = parseInt(row.km_label.replace('KM ', ''));
                     const time = new Date(row.timestamp).getTime();
                     const kmMatch = km >= kmStart && km <= kmEnd;
                     const timeMatch = (!startTimestamp || time >= startTimestamp) &&
