--- a/index.html
+++ b/index.html
@@ -394,6 +394,11 @@
             <tbody></tbody>
         </table>
     </div>
+    <div style="margin-bottom: 1rem;">
+       <label><input type="checkbox" id="toggleSpeed" checked> Tampilkan Kecepatan</label>
+       <label style="margin-left: 1rem;"><input type="checkbox" id="toggleVibration" checked> Tampilkan Getaran</label>
+    </div>
+
 
     <div class="chart-container">
         <canvas id="myChart"></canvas>
