--- a/index.html
+++ b/index.html
@@ -357,15 +357,15 @@
     <label for="headingSelect"><i class="fas fa-location-arrow"></i> Heading:</label>
     <select id="headingSelect">
         <option value="">-- Semua --</option>
-        <option value="muatan">Muatan</option>
-        <option value="kosongan">Kosongan</option>
+        <option value="MUATAN">Muatan</option>
+        <option value="KOSONGAN">Kosongan</option>
     </select>
 
     <label for="kmStart"><i class="fas fa-route"></i> Dari KM:</label>
-    <input type="number" id="kmStart" min="0" value="2" />
+    <input type="number" id="kmStart" min="0" value="25" />
 
     <label for="kmEnd">Sampai KM:</label>
-    <input type="number" id="kmEnd" min="0" value="7" />
+    <input type="number" id="kmEnd" min="0" value="66" />
 
     <br />
 
